tried the newer jquery, broken
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
           <a class="brand" href="#">Δ</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="active"><a href="#">About</a></li>
+              <li><a href="#blog">Blog</a></li>
+              <li><a href="#projects">Projects</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-">
 
       <h1>Bret Comnes</h1>
       <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
@@ -61,7 +61,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/bootstrap.js"></script>
   </body>
 </html>
