--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@ title: Blog
 {% for post in paginator.posts %}
 
    <!-- here add you post markup -->
-   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-   <p class="author">
-    <span class="date">{{post.date}}</span>
-  </p>
   <div class="content">
+   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+   <p class="lead"><small>{{post.date | date_to_string}}</small></p>
     {{ post.content }}
+	<hr>
   </div>
 {% endfor %}
 
