--- a/index.html
+++ b/index.html
@@ -7,23 +7,37 @@ title: Blog
 
    <!-- here add you post markup -->
 
-{% if post.layout == {{post}} %}
-  <div class="content">
-   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-   <p class="lead"><small>{{post.date | date_to_string}}</small></p>
-    {{ post.content }}
+{% case post.layout %}
+
+{% when 'post' %}
+
+<div class="content">
+ <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+ <p class="lead"><small>{{post.date | date_to_string}}</small></p>
+  {{ post.content }}
 	<hr>
-  </div>
+</div>
+
+{% when 'linklog' %}
+
+<div class="content">
+ <small><a href="{{ post.url }}">{{ post.title }}</a></small>
+ <p class="lead"><small>{{post.date | date_to_string}}</small></p>
+  {{ post.content }}
+	<hr>
+</div>
+
 {% else %}
 
 <div class="content">
  <small><a href="{{ post.url }}">{{ post.title }}</a></small>
  <p class="lead"><small>{{post.date | date_to_string}}</small></p>
   {{ post.content }}
-{{post.layout}}
 	<hr>
 </div>
-{% endif %}
+
+{% endcase %}
+
 {% endfor %}
 
 {% include paginator.html %}
