--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Blog
 
 {% if paginator.page == 1 %}
 <section>
-  <h1>My Pinboard</h1>
+  <h1>Bookmarks</h1>
   <ul id="pinboard_linkroll">Fetching linkroll&#8230;</ul>
   <p><a href="http://pinboard.in/u:bcomnes">My Pinboard Bookmarks &raquo;</a></p>
 </section>
