--- a/index.html
+++ b/index.html
@@ -2,50 +2,13 @@
 layout: index
 title: Blog
 ---
+<!-- posterator generates our list of blog posts -->
+{% include posterator.html %} 
 
-<section id="posts">
-{% for post in paginator.posts %}
-{% case post.layout %}
-{% when 'post' %}
-    {% include post-content.html %}
-{% when 'linklog' %}
-    <article class="linklog">
-        <h1><a href="{{ post.external-url }}">{{ post.title }}</a>
-            <span class='linklog-marker'>&rarr;</span></h3>
-            <p class="lead"><small><a href="{{ post.url }}">&#916</a>{{post.date | date_to_string}}</small></p>
-            {{ post.content }}
-            <hr>
-        </article>
-{% else %}
-    <article class="content">
-        <small><a href="{{ post.url }}">{{ post.title }}</a></small>
-        <p class="lead"><small>{{post.date | date_to_string}}</small></p>
-        {{ post.content }}
-        <hr>
-    </article>
-{% endcase %}
-
-{% endfor %}
-</section> <!-- End posts Section -->
+<!-- This is temporary, but puts a small list of pinboard links on page 1 -->
 {% if paginator.page == 1 %}
-<section>
-  <h1>Bookmarks</h1>
-  <ul id="pinboard_linkroll">Fetching linkroll&#8230;</ul>
-  <p><a href="http://pinboard.in/u:bcomnes">My Pinboard Bookmarks &raquo;</a></p>
-</section>
-<script type="text/javascript">
-  var linkroll = 'pinboard_linkroll'; //id target for pinboard list
-  var pinboard_user = "bcomnes"; //id target for pinboard list
-  var pinboard_count = 3; //id target for pinboard list
-  (function(){
-    var pinboardInit = document.createElement('script');
-    pinboardInit.type = 'text/javascript';
-    pinboardInit.async = true;
-    pinboardInit.src = '/js/pinboard.js';
-    document.getElementsByTagName('head')[0].appendChild(pinboardInit);
-  })();
-</script>
-<hr>
+{% include pinboard.html %}
 {% endif %}
 
+<!-- This is the paginator box-->
 {% include paginator.html %}
