Put the bookmarks into a well and column.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Blog
 {% include paginator.html %}
 </section>
 
-<div class="sidebar-thirds">
+<div class="row">
 <!-- This is temporary, but puts a small list of pinboard links on page 1 -->
 {% if paginator.page == 1 %}
 {% include pinboard.html %}
