--- a/pages.html
+++ b/pages.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Pages 
+title: All Pages 
 ---
-<h1>All Pages</h1>
+<h1>{{ page.title }}</h1>
 <ul>
 
 {% for node in site.pages %}
