--- a/pages/archive.html
+++ b/pages/archive.html
@@ -8,12 +8,13 @@ title : Archive
 {% for post in posts_collate  %}
     {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
     {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
+	{% capture this_month_num %}{{ post.date | date: "%m" }}{% endcapture %}
     {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
     {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
   
     {% if forloop.first %}
       <h1 id="{{this_year}}">{{this_year}}</h1>
-      <h2 id ="{{this_year}}:{{this_month}}">{{this_month}}</h2>
+      <h2 id ="{{this_year}}:{{this_month_num}}">{{this_month}}</h2>
       <ul>
     {% endif %}
   
