Re-factored file names and structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ asides: true
 footer: true
 index: true
 ---
-{% include posterator.html %} 
+{% include index-posterator.html %} 
 
-{% include paginator.html %}
+{% include index-paginator.html %}
