Added a note about tags with spaces

--- a/pages/tags.html
+++ b/pages/tags.html
@@ -2,7 +2,7 @@
 layout: default
 title: Tags
 ---
-
+<!--TODO: Find a fix to tags with spaces-->
 <ul class="tag_box inline">
     {% if site.tags.first[0] != null %}{% comment %} If tags exist {% endcomment %}
         {% for tag in site.tags %}{% comment %} add an element like the following for each tag item {% endcomment %}
