Pretied up the outbox

--- a/pages/inbox.html
+++ b/pages/inbox.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title : Notifications
+title : Inbox
 ---
 <p> Incoming Webmentions:</p>
 <ul class="webmentions links" id="http://{{ site.url }}">
