--- a/pages/outbox.html
+++ b/pages/outbox.html
@@ -8,5 +8,7 @@ title: Outbox
   <p><pre>curl -i -d "source=http://{{ site.url }}{{ page.url }}&target={{ page.reply_url }}" `curl -i -s {{ page.reply_url }} | grep 'rel="http://webmention.org/"' | sed 's/rel="http:\/\/webmention.org\/"//' | grep -o -E 'https?://[^ ">]+' | sort | uniq`</pre></p>
   {% endif %}
   {% endfor %}
+  
+  <p><pre>curl -i -d "source=$SOURCE&target=$TARGET" `curl -i -s $TARGET | grep 'rel="http://webmention.org/"' | sed 's/rel="http:\/\/webmention.org\/"//' | grep -o -E 'https?://[^ ">]+' | sort | uniq`</pre></p>
  
 
