--- a/pages/radio.html
+++ b/pages/radio.html
@@ -5,3 +5,5 @@ footer: true
 ---
 
 <audio controls autoplay="autoplay"><source src="http://pi.bret.io:8000/stream?type=.mp3" type="audio/mp3">Your browser does not support the audio element.</audio>
+
+[Listen in a real media player](http://pi.bret.io:8000/stream.m3u)
